Fixed loupe img navbar overflow for mobile devices

--- a/ns-consulting/ns_consulting/static/css/media_queries.css
+++ b/ns-consulting/ns_consulting/static/css/media_queries.css
@@ -240,7 +240,7 @@
   }
 
   .searcher-submit-btn img {
-    padding: .4rem 0;
+    padding: .3rem 0;
   }
 
   .banner-right-1-XS p {
